fix (support): Added support link in the footer, tightened up some spacing & font sizes
Email encoded using: http://rumkin.com/tools/mailto_encoder/custom.php

--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ img {
 }
 
 .header img {
-	margin: 20px;
+	margin: 1rem 0 0.5rem;
 }
 
 .header h1 {
@@ -80,8 +80,7 @@ img {
 }
 
 .header p.appstore {
-	font-size: 0.65em;
-	margin: 10px;
+	font-size: 0.75em;
 }
 
 .header a {
@@ -250,14 +249,12 @@ ul.row > li, ul.no-style > li {
 /*************
  * Footer
  *************/
-.footer {
+footer {
 	background-color: #252525;
 	padding: 10px 30px;
 	color: #cecece;
-}
-
-.footer p {
-	font-size: 0.6em;
+	font-size: 0.7em;
+	line-height: 1rem;
 }
 
 @media (min-width: 600px) {
